# variable-rate-lending

./: .gitignore  Anchor.toml  Cargo.toml  README.md  rust-toolchain
.github/workflows/: pull-request-token-lending.yml  pull-request.yml
ci/: cargo-build-test.sh  cargo-test-sbf.sh  install-build-deps.sh  rust-version.sh  solana-version.sh
scripts/: add-sub-reward.sh  create-lending-market.sh  create-reserve.sh  deploy-lending.sh  deploy-staking.sh  extend-duration.sh
staking/cli/: Cargo.toml  README.md
staking/cli/src/: main.rs
staking/program/: Cargo.toml
staking/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
staking/program/src/math/: decimal.rs  rate.rs
staking/program/src/state/: mod.rs  stake_account.rs  staking_pool.rs
staking/program/tests/: change_duration.rs  change_owner_and_admin.rs  change_reward_supply.rs  claim_reward.rs  create_stake_account.rs  deposit.rs  init_staking_pool.rs  specification.py  withdraw.rs
staking/program/tests/helpers/: mod.rs
token-lending/: README.md
token-lending/cli/: Cargo.toml  README.md
token-lending/cli/src/: main.rs
token-lending/program/: Cargo.toml
token-lending/program/proptest-regressions/state/: reserve.txt
token-lending/program/src/: error.rs  instruction.rs  lib.rs  processor.rs  pyth.rs
token-lending/program/src/math/: decimal.rs
token-lending/program/src/state/: lending_market.rs  mod.rs  obligation.rs  reserve.rs
token-lending/program/tests/: borrow_obligation_liquidity.rs  deposit_obligation_collateral.rs  deposit_reserve_liquidity.rs  flash_loan.rs  init_lending_market.rs  init_obligation.rs  init_reserve.rs  liquidate_obligation.rs  max_withdraw_bug_poc.rs  obligation_end_to_end.rs  redeem_reserve_collateral.rs  refresh_obligation.rs  refresh_reserve.rs  repay_obligation_liquidity.rs  set_lending_market_owner.rs  update_reserve.rs  withdraw_fee.rs  withdraw_obligation_collateral.rs
token-lending/program/tests/fixtures/: AdtRGGhmqvom3Jemp5YNrxd9q9unX36BZk1pujkkXijL  DfjRzSdj5wm1kHfijm3dQsoZB7kENWCGGWzwGpGesiYm  JA1GQW8ta1LjNn3h1vZmhL3fWEdZ6F9QfZHvPB4y7fLm
token-lending/program/tests/helpers/: mod.rs
