[package]
name = "port-finance-staking"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []
resolver = []

[dependencies]
arrayref = "0.3.6"
bytemuck = "1.5.1"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "=1.9.18"
spl-token = { version = "3.2.0", features=["no-entrypoint"] }
thiserror = "1.0"
uint = "0.8"
do-notation = "0.1.3"

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.13"
log = "0.4.14"
proptest = "0.10"
solana-program-test = "=1.9.18"
solana-sdk = "=1.9.18"
serde = "1.0"
serde_yaml = "0.8"

[lib]
crate-type = ["cdylib", "lib"]
