[package]
name = "port-finance-variable-rate-lending"
version = "0.1.0"
description = "Port Finance Variable Rate Lending Porgram"
authors = ["Port Finance Maintainer <hello@port.finance>"]
repository = "https://github.com/port-finance"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
bytemuck = "1.5.1"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.8.1"
spl-token = { version = "3.1.0", features = ["no-entrypoint"] }
thiserror = "1.0"
uint = "0.8"
port-finance-staking = { path = "../../staking/program", features = [ "no-entrypoint" ] }
switchboard-program = "0.2.1"
quick-protobuf = "*"

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.13"
log = "0.4.14"
proptest = "0.10"
solana-program-test = "1.8.1"
solana-sdk = "1.8.1"
serde = "1.0"
serde_yaml = "0.8"

[lib]
crate-type = ["cdylib", "lib"]
